--- a/css/style.css
+++ b/css/style.css
@@ -1152,6 +1152,10 @@ body{
         align-items: center;
         flex-direction: column;
     }
+    .weCreate__menu{
+        padding: 0;
+        margin: 0 auto;
+    }
 }
 
 @media (max-width: 767.98px) { 
